--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <title>My Page Title</title>
-  <link rel="stylesheet" href="/css/site.css">
-</head>
-<body>
-<p>Your content goes here.</p>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Dean Stanley Official Website - Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  
+  <body id="body">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Dean Stanley</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="user_info.html">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="books.html">Recommended Books</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <main class="row">
+      <div class="col-lg-12">
+        <h1 class="text-center" id="welcome">Welcome to the official website of Dean Stanley.</h1>
+      </div>
+      <div class="col-lg-12">
+        <h4 class="text-center" id="directions">Use the nav-bar at the top of the screen to navigate between pages.</h4>
+      </div>
+        
+    </main>
+
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+  </body>
 </html>
