--- a/app/public/books.html
+++ b/app/public/books.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Dean Stanley Official Website - Recommended Books</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body id="body">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
