--- a/app/public/books.html
+++ b/app/public/books.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Dean Stanley Official Website - Recommended Books</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+
+    <title>Dean Stanley Official Website - Recommended Books</title>
+   
+    <script src="https://unpkg.com/vue@next"></script>
+
   </head>
+
   <body id="body">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
@@ -31,7 +37,7 @@
     </nav>
 
     <main class="row">
-      <div class="container">
+      <div id="ProfileApp" class="container">
         <table class="table table-striped table-hover" id="books_table">
           <thead>
             <tr>
@@ -44,37 +50,13 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>A Hard Day's Write</td>
-              <td>Steve Turner</td>
-              <td>1994</td>
-              <td>Hachette Book Group</td>
-              <td>268</td>
-              <td>US $30.00</td>
-            </tr>
-            <tr>
-              <td>Music by the Numbers</td>
-              <td>Eli Maor</td>
-              <td>2018</td>
-              <td>Harper Collins</td>
-              <td>175</td>
-              <td>US $20.00</td>
-            </tr>
-            <tr>
-              <td>The Shining</td>
-              <td>Stephen King</td>
-              <td>1977</td>
-              <td>Penguin/Random House</td>
-              <td>477</td>
-              <td>US $45.00</td>
-            </tr>
-            <tr>
-              <td>Dreaming the Beatles</td>
-              <td>Rob Sheffield</td>
-              <td>2017</td>
-              <td>Macmillan</td>
-              <td>243</td>
-              <td>US $27.50</td>
+            <tr v-for="book in books">
+              <td>{{ book.title }}</td>
+              <td>{{ book.author }}</td>
+              <td>{{ book.yearPublished }}</td>
+              <td>{{ book.publisher }}</td>
+              <td>{{ book.pgCount }}</td>
+              <td>{{ book.msrp }}</td>
             </tr>
           </tbody>
         </table>
@@ -134,7 +116,8 @@
         </div>
       </form>
     </main>
-    <script src="script.js"></script>
+
+    <script src="js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <script src="js/tablesort.min.js"></script>
     <script>
