--- a/app/public/books.html
+++ b/app/public/books.html
@@ -50,13 +50,13 @@
             </tr>
           </thead>
           <tbody>
-            <tr v-for="book in books">
-              <td>{{ book.title }}</td>
-              <td>{{ book.author }}</td>
-              <td>{{ book.yearPublished }}</td>
-              <td>{{ book.publisher }}</td>
-              <td>{{ book.pgCount }}</td>
-              <td>{{ book.msrp }}</td>
+            <tr v-for="books in books">
+              <td>{{ books.title }}</td>
+              <td>{{ books.author }}</td>
+              <td>{{ books.yearPublished }}</td>
+              <td>{{ books.publisher }}</td>
+              <td>{{ books.pgCount }}</td>
+              <td>{{ books.msrp }}</td>
             </tr>
           </tbody>
         </table>
