--- a/app/public/user_info.html
+++ b/app/public/user_info.html
@@ -36,7 +36,7 @@
       </div>
     </nav>
 
-    <main class="row">
+    <main class="container">
       <div class="row g-5 justify-content-center">
         <center>
           <div class="col-12">
