Another Attempt to link Vue.
Unsuccessful

--- a/app/public/books.html
+++ b/app/public/books.html
@@ -7,9 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 
+    <script src="https://unpkg.com/vue@next"></script>
     <title>Dean Stanley Official Website - Recommended Books</title>
    
-    <script src="https://unpkg.com/vue@next"></script>
+    
 
   </head>
 
@@ -37,7 +38,7 @@
     </nav>
 
     <main>
-      <div class="row" id="BooksApp">
+      <div class="row" id="booksApp">
         <table class="table table-striped table-hover" id="books_table">
           <thead>
             <tr>
@@ -50,7 +51,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr v-for="book in Books">
+            <tr v-for="book in books">
               <td>{{ book.title }}</td>
               <td>{{ book.author }}</td>
               <td>{{ book.yearPublished }}</td>
